# typo

./: .gitignore  CMakeLists.txt  README.md
include/: ScatteredSprite.h  TextSprite.h  game.h  menu.h  scattered.h  sound.h  window.h  wordlist.h
src/: ScatteredSprite.cpp  TextSprite.cpp  function.cpp  function.h  game.cpp  main.cpp  menu.cpp  scattered.cpp  sound.cpp  testfunc.cpp  testfunc.h  window.cpp
